Endpoint for Build Status with Clients
